my altschool project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <nav>
           <ul>
             <li><a href="./index.html">About Samuel</a></li>
-            <li><a href="./application.html">Application Form</a></li>
+            <li><a href="./index2.html">Application Form</a></li>
           </ul>
        </nav>
     </header>
